[tool.poetry]
name = "susml"
version = "0.1.0"
description = "Help me JEsus"
authors = ["Your Name <you@example.com>"]

[[tool.poetry.source]]
name = "private"
url = "https://repo.kolpa.de/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.7"
torch = "1.5.0"
torch-scatter = "2.0.4"
torch-sparse = "0.6.2"
torch-cluster = "1.5.4"
torch-spline-conv = "1.2.0"
torch-geometric = "1.4.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
