[tool.poetry]
name = "susml"
version = "0.1.0"
description = "Dependencies for GCN distributed solutions"
authors = ["Kolya Opahle", "Milan Proell"]

[[tool.poetry.source]]
name = "private"
url = "https://repo.kolpa.de/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.5.0"
torch-scatter = "2.0.5"
torch-sparse = "0.6.7"
torch-cluster = "1.5.7"
torch-spline-conv = "1.2.0"
torch-geometric = "1.6.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
